--- a/purdue/stat656-fall2024/homework1/hw1.rmd
+++ b/purdue/stat656-fall2024/homework1/hw1.rmd
@@ -8,7 +8,7 @@ description: "Homework 1 for STAT 656 at Purdue University"
 output: pdf_document
 ---
 
-## Synthetic Data
+# Synthetic Data
 
 The _autoregressive model_ is frequently used to analyze time series data. The simplest autoregressive model has order 1, and is abbreviated as AR(1). This model assumes that an observation $y_i$ at time point $i\ (i=1,\ldots,n)$ is generated according to $$y_i=\rho y_{i-1}+\epsilon_i,$$ where $\epsilon_i\sim\mathcal{N}(0,\sigma^2)$ independently, and $rho$ and $\sigma$ are unknown parameters. For simplicity, we shall assume that $y_0$ is a fixed constant. We will also assume $|\rho|<1$.
 
@@ -28,38 +28,41 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
     The code implementation is as follows:
     ```{r fig.width=8, fig.height=6}
     # Read data
-    if (file.exists("computation_data_hw_1.csv")) {
-        data <- read.csv("computation_data_hw_1.csv")
-        y <- data[['x']]
+    if (file.exists("data/computation_data_hw_1.csv")) {
+      data <- read.csv("data/computation_data_hw_1.csv")
+      y <- data[["x"]]
     } else {
-        stop("Cannot find the data file 'computation_data_hw_1.csv' at ", getwd())
+      stop("Cannot find the file 'data/computation_data_hw_1.csv' at ", getwd())
     }
 
     # Define the log-likelihood function
     ar_loglik <- function(rho, log_sig) {
-        n <- length(y)
-        sig <- exp(log_sig)
-        rho <- rep(as.numeric(rho), times = n - 1)
-        log_lik <- -0.5 * (
-            n * log(2 * pi)
-            + 2 * n * log_sig
-            + (y[1]^2 + sum((y[2:n] - rho * y[1:(n-1)])^2)) / sig^2
-        )
-        return(log_lik)
+      y <- .GlobalEnv$y
+      n <- length(y)
+      sig <- exp(log_sig)
+      rho <- rep(as.numeric(rho), times = n - 1)
+      denom <- n * log(2 * pi) + 2 * n * log_sig
+      log_lik <- -0.5 * (
+        denom + (y[1]^2 + sum((y[2:n] - rho * y[1:(n - 1)])^2)) / sig^2
+      )
+      return(log_lik)
     }
 
     # Visualization
-    rho <- seq(-0.99, 0.99, length=100)
-    log_sig <- seq(-1.0, 0.0, length=100)
+    rho <- seq(-0.99, 0.99, length = 100)
+    log_sig <- seq(-1.0, 0.0, length = 100)
     loglik <- outer(rho, log_sig, Vectorize(ar_loglik))
     contour(
-        x=rho,
-        y=log_sig,
-        z=loglik,
-        xlab=expression(rho),
-        ylab=expression(log(sigma)),
-        nlevels=20,
+      x = rho,
+      y = log_sig,
+      z = loglik,
+      xlab = expression(rho),
+      ylab = expression(log(sigma)),
+      nlevels = 20,
+      axes = FALSE,
     )
+    axis(side = 1, at = seq(-1.0, 1.0, by = 0.25))
+    axis(side = 2, at = seq(-1.0, 0.0, by = 0.10))
     ```
 
 3. (10 points) **Solution:**
@@ -73,34 +76,48 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
     $$
     where $C$ is the constant log-normalizer and $C^\prime$ is a constant irrelevant to $\rho$ and $\log(\sigma)$. The visualization of the log of the posterior density is as follows:
     ```{r fig.width=8, fig.height=6}
-    # Define the log-likelihood function
     ar_logpost <- function(rho, log_sig) {
-        log_prior <- -log(2) - 0.5 * (log(2 * pi) + log(100) + log_sig^2 / 100)
-        log_post <- ar_loglik(rho, log_sig) + log_prior
-        return(log_post)
+      log_prior <- -log(2) - 0.5 * (log(2 * pi) + log(100) + log_sig^2 / 100)
+      log_post <- ar_loglik(rho, log_sig) + log_prior
+      return(log_post)
     }
 
-    # Visualization
     logpost <- outer(rho, log_sig, Vectorize(ar_logpost))
     contour(
-        x=rho,
-        y=log_sig,
-        z=logpost,
-        xlab=expression(rho),
-        ylab=expression(log(sigma)),
-        nlevels=20,
+      x = rho,
+      y = log_sig,
+      z = logpost,
+      xlab = expression(rho),
+      ylab = expression(log(sigma)),
+      nlevels = 20,
+      axes = FALSE,
     )
+    axis(side = 1, at = seq(-1.0, 1.0, by = 0.25))
+    axis(side = 2, at = seq(-1.0, 0.0, by = 0.10))
     ```
 
     Compared to the log-likelihood function, the log posterior density is more concentrated around the maximum likelihood estimate of $(\rho, \log(\sigma))^\intercal$. The prior is not overly informative since the shape of the posterior density is still similar to the likelihood function, indicating that the posterior is mainly determined by the likelihood function.
 
 4. (10 points) **Solution:**
 
-    From the visualization in 3., we can see that the posterior density is concentrated around $0.0\leq\rho\leq 1.0$ and $-0.9\leq\log(\sigma)\leq 0.0$. Therefore, we can choose a grid of $\rho$ and $\log(\sigma)$ as follows:
+    From the visualization in 3., we can see that the posterior density is concentrated around $0.25\leq\rho\leq 0.75$ and $-0.9\leq\log(\sigma)\leq -0.5$. Therefore, we can choose a grid of $\rho$ and $\log(\sigma)$ as follows:
     ```{r}
     set.seed(42)
-    rho_grid <- sample(x=seq(0.0, 1.0, length=5000), size=1000)
-    log_sig_grid <- sample(x=seq(-0.9, 0.0, length=5000), size=1000)
+    rho_grid <- seq(0.25, 0.75, length = 100)
+    log_sig_grid <- seq(-0.9, -0.5, length = 100)
+    grid_log_post <- outer(rho_grid, log_sig_grid, Vectorize(ar_logpost))
+    # Calculate the normalized probability density
+    probs <- exp(grid_log_post - max(grid_log_post))
+    probs <- probs / sum(probs)
+    # Randomly sample from the grid
+    indices <- sample(
+      x = seq_len(length(as.vector(probs))),
+      size = 1000,
+      replace = TRUE,
+      prob = probs
+    )
+    rho_sample <- rho_grid[((indices - 1) %% nrow(probs)) + 1]
+    log_sig_sample <- log_sig_grid[((indices - 1) %/% nrow(probs)) + 1]
     ```
 
 5. (5 points) **Solution:**
@@ -110,39 +127,40 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
     library(moments)
 
     # Calculate summaries for rho
-    print(quantile(rho_grid, probs=c(0.025, 0.25, 0.5, 0.75, 0.975)))
-    sprintf("Mean: %.4f", mean(rho_grid))
-    sprintf("Standard Deviation: %.4f", sd(rho_grid))
-    sprintf("Skewnewss: %.4f", skewness(rho_grid))
-    sprintf("Kurtosis: %.4f", kurtosis(rho_grid))
+    print(quantile(rho_sample, probs = c(0.025, 0.25, 0.5, 0.75, 0.975)))
+    sprintf("Mean: %.4f", mean(rho_sample))
+    sprintf("Standard Deviation: %.4f", sd(rho_sample))
+    sprintf("Skewnewss: %.4f", skewness(rho_sample))
+    sprintf("Kurtosis: %.4f", kurtosis(rho_sample))
     # Calculate summaries for log(sigma)
-    print(quantile(log_sig_grid, probs=c(0.025, 0.25, 0.5, 0.75, 0.975)))
-    sprintf("Mean: %.4f", mean(log_sig_grid))
-    sprintf("Standard Deviation: %.4f", sd(log_sig_grid))
-    sprintf("Skewness: %.4f", skewness(log_sig_grid))
-    sprintf("Kurtosis: %.4f", kurtosis(log_sig_grid))
+    print(quantile(log_sig_sample, probs = c(0.025, 0.25, 0.5, 0.75, 0.975)))
+    sprintf("Mean: %.4f", mean(log_sig_sample))
+    sprintf("Standard Deviation: %.4f", sd(log_sig_sample))
+    sprintf("Skewness: %.4f", skewness(log_sig_sample))
+    sprintf("Kurtosis: %.4f", kurtosis(log_sig_sample))
     ```
 
 
 6. (10 points) **Solution:**
 
-   The code implementation is as follows:
+    The code implementation is as follows:
     ```{r}
     ar_post_predictive <- function(rho, log_sig) {
-        # Sample from the posterior predictive distribution
-        n <- length(y)
-        new_y <- rep(0.0, times = n)
-        sig <- exp(log_sig)
-        for (i in 2:n) {
-            new_y[i] <- rnorm(n=1, mean=rho * new_y[i-1], sd=sig)
-        }
-        return(new_y)
+      # Sample from the posterior predictive distribution
+      y <- .GlobalEnv$y
+      n <- length(y)
+      new_y <- rep(0.0, times = n)
+      sig <- exp(log_sig)
+      for (i in 2:n) {
+        new_y[i] <- rnorm(n = 1, mean = rho * new_y[i - 1], sd = sig)
+      }
+      return(new_y)
     }
 
-    params <- data.frame(rho=rho_grid, log_sig=log_sig_grid)
-    samples <- matrix(NA, nrow=nrow(params), ncol=length(y))
-    for (i in 1:nrow(params)) {
-        samples[i,] <- ar_post_predictive(params[i, 'rho'], params[i, 'log_sig'])
+    params <- data.frame(rho = rho_sample, log_sig = log_sig_sample)
+    samples <- matrix(NA, nrow = nrow(params), ncol = length(y))
+    for (i in seq_len(nrow(params))) {
+      samples[i, ] <- ar_post_predictive(params[i, "rho"], params[i, "log_sig"])
     }
     ```
 
@@ -159,26 +177,30 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
     The visualization of the posterior predictive samples against the observed data is as follows:
     ```{r fig.width=8, fig.height=6}
     plot(
-        x=1:length(y),
-        y=samples[1,],
-        col='gray',
-        type='l',
-        lwd=0.75,
-        xlab='Time',
-        ylab='Value',
-        ylim=c(-3.0, 3.0)
+      x = seq_len(length(y)),
+      y = samples[1, ],
+      col = "gray",
+      type = "l",
+      lwd = 0.75,
+      xlab = "Time",
+      ylab = "Value",
+      ylim = c(-3.0, 3.0)
     )
     for (i in 2:100) {
-        lines(x=1:length(y), y=samples[i,], col='gray', lwd=0.75)
+      lines(x = seq_len(length(y)), y = samples[i, ], col = "gray", lwd = 0.75)
     }
-    lines(x=1:length(y), y=y, col='blue', lwd=1.0)
+    lines(x = seq_len(length(y)), y = y, col = "blue", lwd = 1.0)
     legend(
-        'topright',
-        legend=c('Observed', 'Posterior Predictive Samples'),
-        col=c('blue', 'gray'),
-        lwd=c(1, 0.5),
-        bg='white',
+      "topright",
+      legend = c("Observed", "Posterior Predictive Samples"),
+      col = c("blue", "gray"),
+      lwd = c(1, 0.5),
+      bg = "white",
     )
     ```
 
-    From the visualization, we see that the posterior predictive samples have a wider range than the observed data, indicating that the model has a higher uncertainty in prediction and may not be able to capture the true data distribution well. Therefore, the model is not a good fit for the observed data.
+    From the visualization, we see that the posterior predictive samples have a wider range than the observed data, indicating that the model has a higher uncertainty in prediction and may not be able to capture the true data distribution well. Therefore, the model is **not a good fit** for the observed data.
+
+\newpage
+
+# Real Data
